<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!--
		Migration history (see docs/MIGRATION.md):
		  v0.1  Spring Boot 2.7.18 / Java 11  (free support ended 2023-06-30)
		  v0.2  2.7.18 + in-line security patches
		  v0.3  Spring Boot 3.5.16 / Java 21  (free support ended 2026-06-30)
	-->
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.16</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>dev.razzi</groupId>
	<artifactId>watchlist-api</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>watchlist-api</name>
	<description>Options watchlist API - EOL migration demo</description>

	<properties>
		<!-- Boot 3 requires Java 17+. We go straight to the current LTS, 21. -->
		<java.version>21</java.version>

		<!--
			The v0.2 tactical-patch overrides (tomcat.version, spring-framework.version,
			logback.version) were REMOVED here. Left in place, they pinned Spring 5 /
			Tomcat 9 underneath Boot 3.5: the code still compiled, but every Spring
			context failed at runtime with NoClassDefFoundError. Boot 3.5 manages
			current versions of all three.
		-->
	</properties>

	<dependencies>
		<!-- REST controllers, embedded Tomcat, Jackson JSON -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<!-- Spring Data JPA + Hibernate 6 -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<!-- Bean Validation (jakarta.validation) -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>

		<!-- In-memory database, only needed at runtime -->
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- JUnit 5, Mockito, AssertJ, Spring test slices -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<!--
				Software Bill of Materials (SBOM): an inventory of every library
				that ships in the jar, including transitive ones, with exact
				versions and package URLs (purls). Security scanners consume it.

				Since Boot 3.3 the parent POM pre-configures this plugin (version,
				goal, phase, output path), so declaring it is enough. The SBOM is
				written to target/classes/META-INF/sbom/application.cdx.json and
				therefore ships INSIDE the jar. Test-scope libraries are excluded.
				(In the Boot 2.7 version we configured all of this by hand and wrote
				target/bom.json; after upgrading, that stale file fooled the scanner.)
			-->
			<plugin>
				<groupId>org.cyclonedx</groupId>
				<artifactId>cyclonedx-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!--
			Windows-only workaround. Since JDK 16, Java NIO on Windows wakes its
			selector through a Unix-domain socket created in the temp directory.
			If that path is an 8.3 short name or contains spaces (e.g. a user
			folder like "C:\Users\Custom Desktop"), Tomcat fails to start with
			"Unable to establish loopback connection". Point the socket at a
			space-free directory. The profile activates automatically on Windows
			and has no effect on Linux/macOS or in CI.
		-->
		<profile>
			<id>windows-uds-workaround</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<uds.tmpdir>${env.PUBLIC}</uds.tmpdir>
				<!-- Picked up by the Surefire test runner's forked JVM. -->
				<argLine>-Djdk.net.unixdomain.tmpdir=${uds.tmpdir}</argLine>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
							<!-- Same fix for "mvnw spring-boot:run". -->
							<jvmArguments>-Djdk.net.unixdomain.tmpdir=${uds.tmpdir}</jvmArguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
